# Azure_GRC

./: .gitignore  LICENSE.txt  README.md  base.yaml  env_example.txt  mkdocs.yml  pre-commit.yaml  pyproject.toml  pytest.ini  requirements.txt
agents/: README.md  __init__.py
docs/: API.md  ARCHITECTURE_OVERVIEW.md  AUTO_INDEX.md  GOVERNANCE_PLAYBOOK.md  MODEL_CARD_TEMPLATE.md  README.md  SCHEMA_POLICY_PROFILE.md  SYSTEM_CARD.md
functions/: README.md  local.settings.example.json
infra/: README.md
policyengine/: README.md  __init__.py  core.py  exceptions.py  models.py  profiles.py  rules_engine.py  schema.py  utils.py  validators.py
profiles/: AML.CS0002.yaml  AML.CS0005.yaml  AML.CS0011.yaml  README.md  checklist_rules.yaml  cobit_2019.yaml  coso_erm.yaml  defense.yaml  education_public.yaml  eu_ai_act-eu.yaml  finance.yaml  fips_140-3.yaml  gdpr-eu.yaml  healthcare.yaml  hipaa-us.yaml  ieee_7000-series.yaml  index.json  iso_23894-risk.yaml  iso_27001.yaml  iso_31000.yaml  iso_38507-governance.yaml  iso_42001-global.yaml  iso_42001-global_OLD.yaml  iso_9001.yaml  malformed.yaml  nist_800-53-fedramp-moderate.yaml  nist_rmf-us.yaml  oecd_principles.yaml  pci_dss-4_0.yaml  pmbok.yaml  soc2-tsc.yaml  transportation_autonomy.yaml  unesco_ethics.yaml
rules/: README.md  bias_fairness.yaml  change_management.yaml  cost_budget.yaml  data_residency.yaml  encryption.yaml  human_review.yaml  incident_response.yaml  index.json  kpi_limits.yaml  lifecycle.yaml  logging_audit.yaml  model_allowlist.yaml  network_egress.yaml  output_guardrails.yaml  pii.yaml  rbac.yaml  (+3 more)
(+223 files in other folders)
